--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,15 +1,28 @@
 @import url(https://fonts.googleapis.com/css?family=Aclonica);
 
+body,
+html {
+  height: 100%;
+}
+
+.background {
+  background-image: url("https://i.pinimg.com/originals/31/d6/85/31d685fa99fb1a54f326c35a5ac77747.jpg");
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .btn {
   color: white;
 }
 
 .general-title {
   height: 10em;
-  position: relative
+  position: relative;
 }
 
-  .general-title p {
+.general-title p {
   margin: 0;
   position: absolute;
   font-size: 70px;
@@ -17,5 +30,5 @@
   top: 50%;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%);
 }
