--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,20 @@ body {
   color: white;
 }
 
+.btn-warning {
+  background-color: #f07c22 !important;
+  font-size: 30px;
+  font-family: aclonica;
+}
+.btn-success, .btn-outline-success {
+  font-size: 15px;
+  font-family: aclonica;
+}
+.btn-danger {
+  font-size: 15px;
+  font-family: aclonica;
+}
+
 .general-title {
   height: 10em;
   position: relative;
