Fix - Added open modal action to mobile button

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,7 +28,7 @@
       <button type="button" class="btn btn-outline-success btn-home" (click)="openDialog()">
         <span>Join a Scrum</span>
       </button>
-      <button mat-fab class="btn-home-mobile-left">
+      <button mat-fab class="btn-home-mobile-left" (click)="openDialog()">
         <mat-icon>insert_link</mat-icon>
       </button>
     </div>
