--- a/src/app/home/join-scrum-modal/join-scrum-modal.html
+++ b/src/app/home/join-scrum-modal/join-scrum-modal.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Hi ! ! !</h1>
 <div mat-dialog-content>
   <p>Please, enter the scrum GUID you want to join:</p>
-  <mat-form-field>
-    <input style="width: 100%;" autocomplete="off" matInput [(ngModel)]="data.scrumId">
+  <mat-form-field style="width: 100%;">
+    <input autocomplete="off" matInput [(ngModel)]="data.scrumId">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
