Fix - Minor changes to joinScrum modal.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
         <span>Join a Scrum</span>
       </button>
       <button mat-fab class="btn-home-mobile-left" (click)="openDialog()">
-        <mat-icon>insert_link</mat-icon>
+        <mat-icon>shutter_speed</mat-icon>
       </button>
     </div>
   </div>
