Code - Improved notFound and scrumFinished pages.

--- a/src/app/scrum-finished/scrum-finished.component.html
+++ b/src/app/scrum-finished/scrum-finished.component.html
@@ -1,5 +1,21 @@
-<div class="general-title">
-  <p>
-    Scrum was finished, join us on our next iteration :D
-  </p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <h1 class="text-center title welcome">
+        Daily Scrum is over !
+      </h1>
+    </div>
+  </div>
+  <div class="row">
+    <p class="col-12 text-center welcome-p mt-5">
+      Please, join us on our next iteration
+    </p>
+  </div>
+  <div class="row">
+    <div class="col-12 text-center mt-5">
+      <button type="button" class="btn btn-outline-success btn-lg btn-home" routerLink="/home">
+        <span>Return to Home</span>
+      </button>
+    </div>
+  </div>
 </div>
