--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,5 +1,16 @@
-<div class="general-title">
-  <p>
-    We're sorry, we couldn't find the page requested :(
-  </p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <h1 class="text-center title welcome">
+        We're sorry, we couldn't find the page requested
+      </h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 text-center mt-5">
+      <button type="button" class="btn btn-outline-success btn-lg btn-home" routerLink="/home">
+        <span>Return to Home</span>
+      </button>
+    </div>
+  </div>
 </div>
