Code - Removed circle pie.

--- a/src/app/timer/timer.component.scss
+++ b/src/app/timer/timer.component.scss
@@ -18,7 +18,7 @@ $lato: 'Lato';
     display: block;
     margin-bottom: 15px;
     font: normal 0.94em $lato;
-    color: #1a1a1a;
+    color: white;
     text-transform: uppercase;
     font-family: 'Aclonica';
   }
