--- a/src/app/guest-timer/guest-timer.component.html
+++ b/src/app/guest-timer/guest-timer.component.html
@@ -1,5 +1,5 @@
 <div class="countdown">
-  <h1 *ngIf="activeUser" [@changeTitleSize]="{value: currentState}" (mouseover)="changeTitleSize()"
+  <h1 class="text-center" *ngIf="activeUser" [@changeTitleSize]="{value: currentState}" (mouseover)="changeTitleSize()"
     (mouseleave)="changeTitleSize()">
     {{activeUser.participantName}}
   </h1>
@@ -8,8 +8,12 @@
   </div>
   <div class="row mt-5">
     <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-      <button class="btn btn-warning" *ngIf="!wasStarted" (click)="changeScrumState()">Start Scrum!</button>
-      <button class="btn btn-warning" *ngIf="wasStarted" (click)="changeScrumState()">{{isRunning ? 'Pause' : 'Resume'}} Scrum!</button>
+      <button class="btn btn-warning" *ngIf="!wasStarted" (click)="changeScrumState()">
+        Start Scrum!
+      </button>
+      <button class="btn btn-warning" *ngIf="wasStarted" (click)="changeScrumState()">
+        {{isRunning ? 'Pause' : 'Resume'}} Scrum!
+      </button>
     </div>
   </div>
 </div>
