--- a/src/app/guest-timer/guest-timer.component.html
+++ b/src/app/guest-timer/guest-timer.component.html
@@ -6,14 +6,22 @@
   <div class="row timer">
     <app-timer *ngIf="currentScrum" [isCountdown]="true" [timeBurst]="currentScrum.minutesPerGuest"></app-timer>
   </div>
-  <div class="row mt-5">
-    <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-      <button class="btn btn-warning" *ngIf="!wasStarted" (click)="changeScrumState()">
-        Start Scrum!
-      </button>
-      <button class="btn btn-warning" *ngIf="wasStarted" (click)="changeScrumState()">
-        {{isRunning ? 'Pause' : 'Resume'}} Scrum!
-      </button>
+  <div class="mt-5">
+    <div class="row">
+      <div class="col-12 text-center">
+        <button class="btn btn-warning" *ngIf="!wasStarted" (click)="changeScrumState()">
+          Start Scrum!
+        </button>
+        <button class="btn btn-warning" *ngIf="wasStarted" (click)="changeScrumState()">
+          {{isRunning ? 'Pause' : 'Resume'}} Scrum!
+        </button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 text-center mt-2">
+        <button class="btn btn-warning" (click)="nextUser.emit()">
+          Next guest!
+        </button>
+      </div>
     </div>
   </div>
-</div>
